DEV: Add missing outlet

--- a/desktop/header.html
+++ b/desktop/header.html
@@ -9,7 +9,7 @@
 
     <td class='main-link clearfix' colspan="1">
       {{~raw "topic-status" topic=topic}}
-
+      {{~raw-plugin-outlet name="topic-list-before-link"}}
       <span class='link-top-line'>
         {{~raw-plugin-outlet name="topic-list-before-status"}}
         {{~topic-link topic class="raw-link raw-topic-link"}}
